# llmoop

./: .gitignore  AGENTS.md  CONCEPT.md  EXPERIMENTS.md  README.md  README.txt  TODO.md  TUI.md  pytest.ini
runtime-rs/: Cargo.toml  build.rs
runtime-rs/artifacts/add_one/: backend.json
runtime-rs/shaders/: add_bf16.comp.template  add_bf16_1024.comp  add_one.comp  append_gqa_attention_bf16.comp.template  append_gqa_attention_temporal_read_bf16.comp.template  append_kv_state_bf16.comp.template  append_kv_state_bf16_8x64.comp  append_kv_temporal_commit_bf16.comp.template  causal_conv1d_silu_bf16.comp.template  causal_conv1d_silu_temporal_bf16.comp.template  concatenate_bf16.comp.template  depthwise_conv1d_bf16.comp.template  depthwise_conv1d_bf16_3x1024.comp  dual_linear_silu_multiply_bf16.comp.template  embedding_lookup_batch_bf16.comp.template  embedding_lookup_batch_paired_bf16.comp.template  embedding_lookup_bf16.comp.template  embedding_lookup_paired_bf16.comp.template  gated_delta_scan.comp.template  gated_delta_step.comp.template  gelu_tanh_bf16.comp.template  gqa_attention_bf16.comp.template  gqa_attention_bf16_q16_kv8_d64.comp  gqa_attention_bf16_q16_kv8_d64_cap4.comp  gqa_attention_bf16_q16_kv8_d64_cap8.comp  greedy_sampler_f32.comp.template  greedy_sampler_f32_65536.comp  greedy_sampler_repetition_f32.comp.template  greedy_sampler_runtime_f32.comp.template  linear_batch_bf16.comp.template  linear_batch_cooperative_bf16.comp.template  linear_batch_cooperative_int4.comp.template  linear_batch_fp8_e4m3.comp.template  linear_batch_q8_0.comp.template  linear_bf16.comp.template  linear_bf16_1024x1024.comp  linear_bf16_1024x2560.comp  linear_bf16_1024x3072.comp  linear_bf16_1024x512.comp  linear_bias_bf16.comp.template  (+121 more)
runtime-rs/src/: backend.rs  contract_backend.rs  editor.rs  execution_schedule.rs  lib.rs  stream_circuit.rs  stream_plan.rs  stream_prefix_cache.rs  stream_runtime.rs  stream_runtime_tests.rs  stream_state.rs  tensor_storage.rs  test_support.rs  types.rs  vulkan.rs  vulkan_backend.rs  vulkan_compute.rs  vulkan_distributed.rs  vulkan_pedalboard.rs  vulkan_stream_circuit.rs
runtime-rs/src/editor/: controls.rs  devices.rs  errors.rs  model_editor.rs  model_path.rs  placement.rs  schema.rs  source_components.rs  source_pedals.rs
runtime-rs/src/stream_circuit/: artifacts.rs  graph.rs  placement.rs  runtime_graph.rs  tests.rs  (+3 more)
(+472 files in other folders)
