[package]
name = "llmoop-runtime"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "llmoop_runtime"
path = "src/lib.rs"

[[bin]]
name = "resident-token-demo"
path = "src/bin/resident_token_demo.rs"
required-features = ["vulkan"]

[features]
default = []
vulkan = ["dep:ash"]

[dependencies]
ash = { version = "0.38.0", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
