[package]
name = "llmoop-runtime"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "llmoop_runtime"
path = "src/lib.rs"

[[bin]]
name = "resident-token-demo"
path = "src/bin/resident_token_demo.rs"
required-features = ["vulkan"]

[[bin]]
name = "resident-text-demo"
path = "src/bin/resident_text_demo.rs"
required-features = ["vulkan", "tokenizers"]

[features]
default = []
vulkan = ["dep:ash"]
tokenizers = ["dep:tokenizers"]

[dependencies]
ash = { version = "0.38.0", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = { version = "0.23.1", optional = true }
