[package]
name = "llmoop-runtime"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "llmoop_runtime"
path = "src/lib.rs"

[[bin]]
name = "llmoop-runtime"
path = "src/bin/llmoop_runtime.rs"
required-features = ["vulkan", "tokenizers"]

[[bin]]
name = "llmoop-tui"
path = "src/bin/llmoop_tui.rs"
required-features = ["vulkan", "tokenizers", "tui"]

[features]
default = []
vulkan = ["dep:ash"]
tokenizers = ["dep:tokenizers"]
tui = ["dep:crossterm", "dep:ratatui", "dep:unicode-width"]

[dependencies]
ash = { version = "0.38.0", optional = true }
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
crossterm = { version = "0.29.0", optional = true }
minijinja = { version = "2.21.0", features = ["json"] }
minijinja-contrib = { version = "2.21.0", features = ["pycompat"] }
ratatui = { version = "0.30.2", optional = true, default-features = false, features = ["crossterm_0_29", "layout-cache", "underline-color"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1.15.2"
tokenizers = { version = "0.23.1", optional = true }
unicode-width = { version = "0.2.2", optional = true }
